update images and fix mobile image alignment

--- a/style.css
+++ b/style.css
@@ -1167,4 +1167,8 @@ main {
     .expertise-list li {
         font-size: 1.8vh;
     }
+
+    .detail-images {
+        grid-template-columns: 1fr;
+    }
 }
